Minor fixes (style)

--- a/_css/_vars.styl
+++ b/_css/_vars.styl
@@ -6,7 +6,7 @@ $fontFamily = sans-serif;
 $font = $fontPrimary, $fontSecondary, $fontFamily;
 
 $colorDarkGreen = #3c631b;
-$colorMiddleGreen = #76974a;
+$colorMiddleGreen = darken(#76974a, 10%);
 $colorLight = #efefad;
 $colorFont = #fff;
 
