--- a/_css/_vars.styl
+++ b/_css/_vars.styl
@@ -1,13 +1,14 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300');
+@import url('http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100');
+@import url('http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic');
 
-$fontPrimary = 'Open Sans';
+$fontPrimary = 'Roboto Slab';
 $fontSecondary = Verdana;
 $fontFamily = sans-serif;
 $font = $fontPrimary, $fontSecondary, $fontFamily;
 
-$colorDarkGreen = #3c631b;
-$colorMiddleGreen = darken(#76974a, 10%);
-$colorLight = #efefad;
+$colorDarkGreen = rgba(0,0,0,0);
+$colorContent = rgba(0,0,0,.6);
+$colorLight = #eee;
 $colorFont = #fff;
 
 $widthSidebar = 250px;
