--- a/_css/blocks/general.styl
+++ b/_css/blocks/general.styl
@@ -1,5 +1,7 @@
 body {
 	background-color: $colorLight;
+	font-family: $font;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .4);
 }
 
 a {
@@ -7,9 +9,10 @@ a {
 }
 
 .l-wrapper {
-	width: 960px;
-	box-shadow: 5px 0 10px -5px rgba(0, 0, 0, .7);
-	font-family: $font;
+	width: 720px;
+	margin: 0 auto;
+	box-shadow: 0 0 10px rgba(0, 0, 0, .4);
+	background-color: $colorContent;
 	color: $colorFont;
 	font-size: 14px;
 }
