--- a/_css/blocks/header.styl
+++ b/_css/blocks/header.styl
@@ -1,23 +1,33 @@
 .l-headlink {
 	text-align: center;
 	padding: 10px;
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: -75px;
+	position: fixed;
 }
 
 .l-home-link {
 }
 
 .l-logo {
-	width: 100px;
-	border: 3px solid white;
-	border-radius: 20px;
+	width: 55px;
+	border-radius: 10px;
 }
 
 .l-navigation {
+	text-align: center;
+	background: rgba(0,0,0,.4);
+
+	&_item {
+		display: inline-block;
+	}
+
 	&_link {
-		display: block;
 		text-decoration: none;
-		font-size: 18px;
-		padding: 3px 10px;
+		font-size: 16px;
+		padding: 7px 10px;
+		display: block;
 
 		&:hover {
 			background-color: rgba(0, 0, 0, .1);
