--- a/_css/blocks/sidebar.styl
+++ b/_css/blocks/sidebar.styl
@@ -1,9 +1,9 @@
 .l-sidebar {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	width: 250px;
-	box-shadow: 5px 0 10px -5px rgba(0, 0, 0, .7);
-	background-color: $colorDarkGreen;
+	/*position: fixed;*/
+	/*top: 0;*/
+	/*left: 0;*/
+	/*bottom: 0;*/
+	/*width: 250px;*/
+	/*box-shadow: 5px 0 10px -5px rgba(0, 0, 0, .7);*/
+	/*background-color: $colorDarkGreen;*/
 }
